<resources>
    <string name="app_name" translatable="false">ShareOnGitHub</string>
    <string name="login" translatable="false">Login</string>
    <string name="enter_password" translatable="false">Enter Password</string>
    <string name="gradex" translatable="false">GradeX</string>
    <string name="Login" translatable="false">Login</string>
    <string name="create_account" translatable="false">Create Account</string>
    <string name="Course" translatable="false">Course</string>
    <string name="health_button" translatable="false">health_button</string>
    <string name="art_button" translatable="false">art_button</string>
    <string name="math_button" translatable="false">math_button</string>
    <string name="Username" translatable="false">Username</string>
    <string name="Password" translatable="false">Password</string>
    <string name="course" translatable="false">Course</string>
    <string name="grade" translatable="false">Grade</string>
    <string name="Semester" translatable="false">Semester</string>
    <string name="enter_a_course_and_information" translatable="false">Enter a course and information</string>
    <string name="enter_a_course" translatable="false">Enter a course</string>
    <string name="enter_info" translatable="false">Enter info</string>
    <string name="nothing_to_show_enter_information">Nothing to show, enter information</string>
    <string name="enter_semester">Enter Semester</string>
    <string name="enter_grade">Enter Grade</string>
    <string name="enter_course_information">Enter course information</string>
    <string name="welcome_new_user">Welcome New User</string>
    <string name="gradex1">GradeX</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account1">Create Account</string>
</resources>