<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/gradexbg">

<TextView
    android:id="@+id/CourseView"
    android:layout_width="390dp"
    android:layout_height="390dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="12dp"
    android:padding="8dp"
    android:text="@string/enter_a_course_and_information"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

<EditText
    android:id="@+id/CourseInput"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:hint="@string/enter_a_course"
    android:inputType="textAutoComplete"
    android:padding="8dp"
    app:layout_constraintStart_toEndOf="@+id/CourseText"
    app:layout_constraintTop_toBottomOf="@+id/CourseView"
    tools:layout_editor_absoluteY="414dp"
    android:autofillHints="enter a course" />

<TextView
    android:id="@+id/SemesterText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="512dp"
    android:text="@string/Semester"
    android:textSize="27sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.027"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/CourseText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="412dp"
    android:text="@string/course"
    android:textSize="27sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.024"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/GradeText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="460dp"
    android:text="@string/grade"
    android:textSize="27sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.023"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/SemesterInput"
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="104dp"
        android:autofillHints="enter a semester"
        android:hint="@string/enter_a_course"
        android:inputType="textAutoComplete"
        android:padding="8dp"
        app:layout_constraintStart_toEndOf="@+id/SemesterText"
        app:layout_constraintTop_toBottomOf="@+id/CourseView" />

    <EditText
        android:id="@+id/GradeInput"
        android:layout_width="318dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:autofillHints="enter a grade"
        android:hint="@string/enter_a_course"
        android:inputType="textAutoComplete"
        android:padding="8dp"
        app:layout_constraintStart_toEndOf="@+id/GradeText"
        app:layout_constraintTop_toBottomOf="@+id/CourseView" />

    <Button
    android:id="@+id/EnterButton"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="68dp"
    android:text="@string/enter_info"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.497"
    app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>